--- a/GridView/App.xaml
+++ b/GridView/App.xaml
@@ -3,6 +3,13 @@
              x:Class="Telerik.Windows.Examples.GridView.App"
              >
     <Application.Resources>
-        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Themes/System.Windows.xaml"/>
+                <ResourceDictionary Source="/Themes/Telerik.Windows.Controls.xaml"/>
+                <ResourceDictionary Source="/Themes/Telerik.Windows.Controls.Input.xaml"/>
+                <ResourceDictionary Source="/Themes/Telerik.Windows.Controls.GridView.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
